--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
       <a class="logo" href="./index.html" lang="en"><span class="logo-web">Web</span>Studio</a>
       <nav class="header-flex">
         <ul class="main-nav-list main-nav-flex">
-          <li>
-            <a class="nav-link selected-link" href="./index.html">Студія</a>
-          </li>
+          <li><a class="nav-link selected-link" href="./index.html">Студія</a></li>
           <li><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
           <li><a class="nav-link" href="#">Контакти</a></li>
         </ul>
@@ -45,29 +43,26 @@
     </div>
   </header>
   <main>
+    <!--hero section-->
     <section class="hero-style">
-      <!--hero section-->
       <div class="container">
         <h1 class="hero-text">Ефективні рішення для вашого бізнесу</h1>
-        <button data-modal-open class="hero-batton" type="button">
-          Замовити послугу
-        </button>
-        <div class="backdrop" data-modal>
-          <div class="modal">
-            
-            <button class="modal-close-btn" type="button" data-modal-close>
-              <svg class="modal-close-btn-style">
-                <use href="./images/icons.svg#close-btn"></use>
-              </svg>
-              <p></p>
-            </button>
-          </div>
-        </div>
+        <button data-modal-open class="hero-batton" type="button">Замовити послугу</button>
+                          <div class="backdrop is-hidden" data-modal>
+                            <div class="modal">
+                              <button class="modal-close-btn" type="button" data-modal-close>
+                                <svg class="modal-close-btn-style">
+                                  <use href="./images/icons.svg#close-btn"></use>
+                                </svg>
+                                <p></p>
+                              </button>
+                            </div>
+                          </div>
       </div>
     </section>
 
+    <!--features-->
     <section class="features-section">
-      <!--features-->
       <div class="container">
         <ul class="features-list">
           <li class="list-retreat">
@@ -90,8 +85,7 @@
             </div>
             <h3 class="feature-h3-style">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="feature-p-style">
-              Завдання організації, особливо рамки i місце навчання кадрів
-              тягне у себе.
+              Завдання організації, особливо рамки i місце навчання кадрів тягне у себе.
             </p>
           </li>
           <li class="list-retreat">
@@ -113,18 +107,18 @@
             </div>
             <h3 class="feature-h3-style">ПЛАНУВАННЯ</h3>
             <p class="feature-p-style">
-              Значимість цих проблем настільки очевидна, що реалізація
-              планових завдань.
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
             </p>
           </li>
         </ul>
       </div>
     </section>
 
+    <!--What do we do-->
     <section class="wdwd-retreat">
-      <!--What do we do-->
       <div class="container">
-        <h2 class="index-h2-style">Чим ми займаємося</h2>
+        <h2 class="index-h2-style ">Чим ми займаємося</h2>
         <ul class="wdwd-list">
           <li>
             <img src="./images/box1.jpg" width="370" alt="написання коду" />
@@ -139,8 +133,8 @@
       </div>
     </section>
 
+    <!--Our team-->
     <section class="our-team-retreat our-team-background">
-      <!--Our team-->
       <div class="container">
         <h2 class="index-h2-style">Наша команда</h2>
         <ul class="our-team-flex">
@@ -149,34 +143,25 @@
             <div class="team-card-text">
               <h3 class="our-team-h3-style">Ігор Дем'янненко</h3>
               <p class="our-team-p-style">Product Designer</p>
-              <div class="icons-list">
                 <ul class="social-list">
-                  <li>
-                    <a class="social-link" href="#">
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg></a>
-                  </li>
-                  <li>
-                    <a class="social-link" href="#">
+                      </svg></a></li>
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg></a>
-                  </li>
-                  <li>
-                    <a class="social-link" href="#">
+                      </svg></a></li>
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg></a>
-                  </li>
-                  <li>
-                    <a class="social-link" href="#">
+                      </svg></a></li>
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg></a>
-                  </li>
+                      </svg></a></li>
                 </ul>
-              </div>
+
             </div>
           </li>
           <li class="our-team-card">
@@ -184,34 +169,25 @@
             <div class="team-card-text">
               <h3 class="our-team-h3-style">Ольга Рєпіна</h3>
               <p class="our-team-p-style">Frontend Developer</p>
-              <div class="icons-list">
                 <ul class="social-list">
-                  <li>
-                    <a class="social-link" href="#">
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg></a>
-                  </li>
-                  <li>
-                    <a class="social-link" href="#">
+                      </svg></a></li>
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg></a>
-                  </li>
-                  <li>
-                    <a class="social-link" href="#">
+                      </svg></a></li>
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg></a>
-                  </li>
-                  <li>
-                    <a class="social-link" href="#">
+                      </svg></a></li>
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg></a>
-                  </li>
+                      </svg></a></li>
                 </ul>
-              </div>
+
             </div>
           </li>
           <li class="our-team-card">
@@ -219,34 +195,25 @@
             <div class="team-card-text">
               <h3 class="our-team-h3-style">Микола Тарасов</h3>
               <p class="our-team-p-style">Marketing</p>
-              <div class="icons-list">
                 <ul class="social-list">
-                  <li>
-                    <a class="social-link" href="#">
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg></a>
-                  </li>
-                  <li>
-                    <a class="social-link" href="#">
+                      </svg></a></li>
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg></a>
-                  </li>
-                  <li>
-                    <a class="social-link" href="#">
+                      </svg></a></li>
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg></a>
-                  </li>
-                  <li>
-                    <a class="social-link" href="#">
+                      </svg></a></li>
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg></a>
-                  </li>
+                      </svg></a></li>
                 </ul>
-              </div>
+
             </div>
           </li>
           <li class="our-team-card">
@@ -254,44 +221,35 @@
             <div class="team-card-text">
               <h3 class="our-team-h3-style">Михайло Єрмаков</h3>
               <p class="our-team-p-style">UI Designer</p>
-              <div class="icons-list">
                 <ul class="social-list">
-                  <li>
-                    <a class="social-link" href="#">
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg></a>
-                  </li>
-                  <li>
-                    <a class="social-link" href="#">
+                      </svg></a></li>
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg></a>
-                  </li>
-                  <li>
-                    <a class="social-link" href="#">
+                      </svg></a></li>
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg></a>
-                  </li>
-                  <li>
-                    <a class="social-link" href="#">
+                      </svg></a></li>
+                  <li><a class="social-link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg></a>
-                  </li>
+                      </svg></a></li>
                 </ul>
-              </div>
+
             </div>
           </li>
         </ul>
       </div>
     </section>
 
-    <section>
+    <section class="customers-padding">
       <!--regular customers-->
 
-      <div class="container customers-padding">
+      <div class="container ">
         <h2 class="index-h2-style">Постійні клієнти</h2>
         <ul class="customers-list">
           <li class="customers-list-ithem">
@@ -306,6 +264,7 @@
               <svg class="customer-logo">
                 <use href="./images/icons.svg#icon-company-5" width="106" height="60"></use>
               </svg>
+
             </a>
           </li>
           <li class="customers-list-ithem">
@@ -313,6 +272,7 @@
               <svg class="customer-logo">
                 <use href="./images/icons.svg#icon-company-4" width="106" height="60"></use>
               </svg>
+
             </a>
           </li>
           <li class="customers-list-ithem customed">
@@ -320,6 +280,7 @@
               <svg class="customer-logo">
                 <use href="./images/icons.svg#icon-company-3" width="106" height="60"></use>
               </svg>
+
             </a>
           </li>
           <li class="customers-list-ithem">
@@ -327,6 +288,7 @@
               <svg class="customer-logo">
                 <use href="./images/icons.svg#icon-company-2" width="106" height="60"></use>
               </svg>
+
             </a>
           </li>
           <li class="customers-list-ithem">
@@ -334,10 +296,12 @@
               <svg class="customer-logo">
                 <use href="./images/icons.svg#icon-company-1" width="106" height="60"></use>
               </svg>
+
             </a>
           </li>
         </ul>
       </div>
+
     </section>
   </main>
   <footer class="footer-fon">
@@ -357,39 +321,29 @@
         </address>
       </div>
       <div class="footer-icons-list">
-        <h4 class="footer-h4-style">приєднуйтесь</h4>
+        <b class="footer-b-style">приєднуйтесь</b>
         <ul class="social-list">
-          <li>
-            <a class="footer-social-link" href="#">
+          <li><a class="footer-social-link" href="#">
               <svg class="footer-social-icon">
                 <use href="./images/icons.svg#icon-instagram"></use>
-              </svg></a>
-          </li>
-          <li>
-            <a class="footer-social-link" href="#">
+              </svg></a></li>
+          <li><a class="footer-social-link" href="#">
               <svg class="footer-social-icon">
                 <use href="./images/icons.svg#icon-twitter"></use>
-              </svg></a>
-          </li>
-          <li>
-            <a class="footer-social-link" href="#">
+              </svg></a></li>
+          <li><a class="footer-social-link" href="#">
               <svg class="footer-social-icon">
                 <use href="./images/icons.svg#icon-facebook"></use>
-              </svg></a>
-          </li>
-          <li>
-            <a class="footer-social-link" href="#">
+              </svg></a></li>
+          <li><a class="footer-social-link" href="#">
               <svg class="footer-social-icon">
                 <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg></a>
-          </li>
+              </svg></a></li>
         </ul>
       </div>
     </div>
   </footer>
-
-
-  <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
