--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,9 @@
       <nav class="header-flex">
         <ul class="main-nav-list main-nav-flex">
           <li><a class="nav-link" href="./index.html">Студія</a></li>
-          <li><a class="nav-link selected-link" href="./portfolio.html">Портфоліо</a></li>
+          <li>
+            <a class="nav-link selected-link" href="./portfolio.html">Портфоліо</a>
+          </li>
           <li><a class="nav-link" href="#">Контакти</a></li>
         </ul>
       </nav>
@@ -49,33 +51,27 @@
     <section class="portfolio-section">
       <div class="container">
         <ul class="filter-list-flex">
-          <li>
-            <button class="button-style curent-filter" type="button">
-              Усі
-            </button>
-          </li>
-          <li>
-            <button class="button-style" type="button">Веб-сайти</button>
-          </li>
+          <li><button class="button-style curent-filter" type="button">
+              Усі            </button>          </li>
+          <li><button class="button-style" type="button">Веб-сайти</button></li>
           <li><button class="button-style" type="button">Додатки</button></li>
           <li><button class="button-style" type="button">Дизайн</button></li>
-          <li>
-            <button class="button-style" type="button">Маркетинг</button>
-          </li>
+          <li><button class="button-style" type="button">Маркетинг</button></li>
         </ul>
         <ul class="portfolio-card-flex">
-          <li class="portfolio-card">
-            <a href="#">
+          <li>
+            <a class="portfolio-card" href="#">
               <img class="portfolio-card-img-size" src="./images/tehnokriak.jpg"
-                alt="проект Технокряк із розділу Веб-сайти" />
-              <div class="card-description">
-                <h3 class="h3-portfolio">Технокряк</h3>
-                <p class="p-portfolio">Веб-сайт</p>
-              </div>
+                alt="проект Технокряк із розділу Веб-сайти" />  
+                  <div class="card-description">
+                    <h3 class="h3-portfolio">Технокряк</h3>
+                    <p class="p-portfolio">Веб-сайт</p>
+                  </div>
             </a>
+                      
           </li>
-          <li class="portfolio-card">
-            <a href="#">
+          <li>
+            <a class="portfolio-card" href="#">
               <img class="portfolio-card-img-size" src="./images/poster-ngs.jpg"
                 alt="проект Постер New Orlean vs Golden Star із розділу Дизайн" />
               <div class="card-description">
@@ -84,8 +80,8 @@
               </div>
             </a>
           </li>
-          <li class="portfolio-card">
-            <a href="#"><img class="portfolio-card-img-size" src="./images/seafood.jpg"
+          <li>
+            <a class="portfolio-card" href="#"><img class="portfolio-card-img-size" src="./images/seafood.jpg"
                 alt="проект Ресторан Seafood із розділу Додатки" />
               <div class="card-description">
                 <h3 class="h3-portfolio">Ресторан Seafood</h3>
@@ -93,8 +89,8 @@
               </div>
             </a>
           </li>
-          <li class="portfolio-card">
-            <a href="#"><img class="portfolio-card-img-size" src="./images/prime.jpg"
+          <li>
+            <a class="portfolio-card" href="#"><img class="portfolio-card-img-size" src="./images/prime.jpg"
                 alt="Проєкт Prime із розділу Маркетинг" />
               <div class="card-description">
                 <h3 class="h3-portfolio">Проєкт Prime</h3>
@@ -102,8 +98,8 @@
               </div>
             </a>
           </li>
-          <li class="portfolio-card">
-            <a href="#"><img class="portfolio-card-img-size" src="./images/boxes.jpg"
+          <li>
+            <a class="portfolio-card" href="#"><img class="portfolio-card-img-size" src="./images/boxes.jpg"
                 alt="Проєкт Boxes із розділу додатки" />
               <div class="card-description">
                 <h3 class="h3-portfolio">Проєкт Boxes</h3>
@@ -111,8 +107,8 @@
               </div>
             </a>
           </li>
-          <li class="portfolio-card">
-            <a href="#"><img class="portfolio-card-img-size" src="./images/no-borders.jpg"
+          <li>
+            <a class="portfolio-card" href="#"><img class="portfolio-card-img-size" src="./images/no-borders.jpg"
                 alt="проект Inspiration has no Borders із розділу Веб-сайти" />
               <div class="card-description">
                 <h3 class="h3-portfolio">Inspiration has no Borders</h3>
@@ -120,8 +116,8 @@
               </div>
             </a>
           </li>
-          <li class="portfolio-card">
-            <a href="#"><img class="portfolio-card-img-size" src="./images/limited-edition.jpg"
+          <li>
+            <a class="portfolio-card" href="#"><img class="portfolio-card-img-size" src="./images/limited-edition.jpg"
                 alt="проект Видання Limited Edition із розділу Дизайн" />
               <div class="card-description">
                 <h3 class="h3-portfolio">Видання Limited Edition</h3>
@@ -129,8 +125,8 @@
               </div>
             </a>
           </li>
-          <li class="portfolio-card">
-            <a href="#"><img class="portfolio-card-img-size" src="./images/lab.jpg"
+          <li>
+            <a class="portfolio-card" href="#"><img class="portfolio-card-img-size" src="./images/lab.jpg"
                 alt="Проєкт LAB із розділу Маркетинг" />
               <div class="card-description">
                 <h3 class="h3-portfolio">Проєкт LAB</h3>
@@ -138,8 +134,8 @@
               </div>
             </a>
           </li>
-          <li class="portfolio-card">
-            <a href="#"><img class="portfolio-card-img-size" src="./images/business.jpg"
+          <li>
+            <a class="portfolio-card" href="#"><img class="portfolio-card-img-size" src="./images/business.jpg"
                 alt="проект Growing Business із розділу Додатки" />
               <div class="card-description">
                 <h3 class="h3-portfolio">Growing Business</h3>
@@ -167,25 +163,34 @@
           </ul>
         </address>
       </div>
+
       <div class="footer-icons-list">
-        <h4 class="footer-h4-style">приєднуйтесь</h4>
+        <b class="footer-b-style">приєднуйтесь</b>
         <ul class="social-list">
-          <li><a class="footer-social-link" src="" href="#">
+          <li>
+            <a class="footer-social-link" href="#">
               <svg class="footer-social-icon">
                 <use href="./images/icons.svg#icon-instagram"></use>
-              </svg></a></li>
-          <li><a class="footer-social-link" src="" href="#">
+              </svg></a>
+          </li>
+          <li>
+            <a class="footer-social-link" href="#">
               <svg class="footer-social-icon">
                 <use href="./images/icons.svg#icon-twitter"></use>
-              </svg></a></li>
-          <li><a class="footer-social-link" src="" href="#">
+              </svg></a>
+          </li>
+          <li>
+            <a class="footer-social-link" href="#">
               <svg class="footer-social-icon">
                 <use href="./images/icons.svg#icon-facebook"></use>
-              </svg></a></li>
-          <li><a class="footer-social-link" src="" href="#">
+              </svg></a>
+          </li>
+          <li>
+            <a class="footer-social-link" href="#">
               <svg class="footer-social-icon">
                 <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg></a></li>
+              </svg></a>
+          </li>
         </ul>
       </div>
     </div>
