--- a/portfolio.html
+++ b/portfolio.html
@@ -61,8 +61,15 @@
         <ul class="portfolio-card-flex">
           <li>
             <a class="portfolio-card" href="#">
-              <img class="portfolio-card-img-size" src="./images/tehnokriak.jpg"
-                alt="проект Технокряк із розділу Веб-сайти" />  
+              <div class="porfolio-description">
+                <img class="portfolio-card-img-size" src="./images/tehnokriak.jpg"
+                  alt="проект Технокряк із розділу Веб-сайти" />  
+                <p class="site-description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
                   <div class="card-description">
                     <h3 class="h3-portfolio">Технокряк</h3>
                     <p class="p-portfolio">Веб-сайт</p>
@@ -72,8 +79,15 @@
           </li>
           <li>
             <a class="portfolio-card" href="#">
+              <div class="porfolio-description">
               <img class="portfolio-card-img-size" src="./images/poster-ngs.jpg"
                 alt="проект Постер New Orlean vs Golden Star із розділу Дизайн" />
+                <p class="site-description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+                </div>
               <div class="card-description">
                 <h3 class="h3-portfolio">Постер New Orlean vs Golden Star</h3>
                 <p class="p-portfolio">Дизайн</p>
@@ -81,8 +95,16 @@
             </a>
           </li>
           <li>
-            <a class="portfolio-card" href="#"><img class="portfolio-card-img-size" src="./images/seafood.jpg"
-                alt="проект Ресторан Seafood із розділу Додатки" />
+            <a class="portfolio-card" href="#">
+              <div class="porfolio-description">
+                <img class="portfolio-card-img-size" src="./images/seafood.jpg"
+                  alt="проект Ресторан Seafood із розділу Додатки" />
+                <p class="site-description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-description">
                 <h3 class="h3-portfolio">Ресторан Seafood</h3>
                 <p class="p-portfolio">Додаток</p>
@@ -90,8 +112,16 @@
             </a>
           </li>
           <li>
-            <a class="portfolio-card" href="#"><img class="portfolio-card-img-size" src="./images/prime.jpg"
-                alt="Проєкт Prime із розділу Маркетинг" />
+            <a class="portfolio-card" href="#">
+              <div class="porfolio-description">
+                <img class="portfolio-card-img-size" src="./images/prime.jpg"
+                  alt="Проєкт Prime із розділу Маркетинг" />
+                <p class="site-description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-description">
                 <h3 class="h3-portfolio">Проєкт Prime</h3>
                 <p class="p-portfolio">Маркетинг</p>
@@ -99,8 +129,16 @@
             </a>
           </li>
           <li>
-            <a class="portfolio-card" href="#"><img class="portfolio-card-img-size" src="./images/boxes.jpg"
-                alt="Проєкт Boxes із розділу додатки" />
+            <a class="portfolio-card" href="#">
+              <div class="porfolio-description">
+                <img class="portfolio-card-img-size" src="./images/boxes.jpg"
+                  alt="Проєкт Boxes із розділу додатки" />
+                <p class="site-description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-description">
                 <h3 class="h3-portfolio">Проєкт Boxes</h3>
                 <p class="p-portfolio">Додаток</p>
@@ -108,8 +146,16 @@
             </a>
           </li>
           <li>
-            <a class="portfolio-card" href="#"><img class="portfolio-card-img-size" src="./images/no-borders.jpg"
-                alt="проект Inspiration has no Borders із розділу Веб-сайти" />
+            <a class="portfolio-card" href="#">
+              <div class="porfolio-description">
+                <img class="portfolio-card-img-size" src="./images/no-borders.jpg"
+                  alt="проект Inspiration has no Borders із розділу Веб-сайти" />
+                <p class="site-description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-description">
                 <h3 class="h3-portfolio">Inspiration has no Borders</h3>
                 <p class="p-portfolio">Веб-сайт</p>
@@ -117,8 +163,16 @@
             </a>
           </li>
           <li>
-            <a class="portfolio-card" href="#"><img class="portfolio-card-img-size" src="./images/limited-edition.jpg"
-                alt="проект Видання Limited Edition із розділу Дизайн" />
+            <a class="portfolio-card" href="#">
+              <div class="porfolio-description">
+                <img class="portfolio-card-img-size" src="./images/limited-edition.jpg"
+                  alt="проект Видання Limited Edition із розділу Дизайн" />
+                <p class="site-description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-description">
                 <h3 class="h3-portfolio">Видання Limited Edition</h3>
                 <p class="p-portfolio">Дизайн</p>
@@ -126,8 +180,16 @@
             </a>
           </li>
           <li>
-            <a class="portfolio-card" href="#"><img class="portfolio-card-img-size" src="./images/lab.jpg"
-                alt="Проєкт LAB із розділу Маркетинг" />
+            <a class="portfolio-card" href="#">
+              <div class="porfolio-description">
+                <img class="portfolio-card-img-size" src="./images/lab.jpg"
+                  alt="Проєкт LAB із розділу Маркетинг" />
+                <p class="site-description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-description">
                 <h3 class="h3-portfolio">Проєкт LAB</h3>
                 <p class="p-portfolio">Маркетинг</p>
@@ -135,8 +197,16 @@
             </a>
           </li>
           <li>
-            <a class="portfolio-card" href="#"><img class="portfolio-card-img-size" src="./images/business.jpg"
-                alt="проект Growing Business із розділу Додатки" />
+            <a class="portfolio-card" href="#">
+              <div class="porfolio-description">
+                <img class="portfolio-card-img-size" src="./images/business.jpg"
+                  alt="проект Growing Business із розділу Додатки" />
+                <p class="site-description">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                  відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
               <div class="card-description">
                 <h3 class="h3-portfolio">Growing Business</h3>
                 <p class="p-portfolio">Додаток</p>
