--- a/portfolio.html
+++ b/portfolio.html
@@ -255,8 +255,8 @@
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg></a>
           </li>
-          <li>
-            <a class="footer-social-link" href="#">
+          <li class="footer-social-link">
+            <a  href="#">
               <svg class="footer-social-icon">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg></a>
