--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
       <div class="container">
         <ul class="filter-list-flex">
           <li><button class="button-style curent-filter" type="button">
-              Усі            </button>          </li>
+              Усі </button> </li>
           <li><button class="button-style" type="button">Веб-сайти</button></li>
           <li><button class="button-style" type="button">Додатки</button></li>
           <li><button class="button-style" type="button">Дизайн</button></li>
@@ -63,31 +63,31 @@
             <a class="portfolio-card" href="#">
               <div class="porfolio-description">
                 <img class="portfolio-card-img-size" src="./images/tehnokriak.jpg"
-                  alt="проект Технокряк із розділу Веб-сайти" />  
+                  alt="проект Технокряк із розділу Веб-сайти" />
                 <p class="site-description">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
                   відвідувачу отримати
                   вичерпні відомості про компанію чи приватну особу.
                 </p>
               </div>
-                  <div class="card-description">
-                    <h3 class="h3-portfolio">Технокряк</h3>
-                    <p class="p-portfolio">Веб-сайт</p>
-                  </div>
+              <div class="card-description">
+                <h3 class="h3-portfolio">Технокряк</h3>
+                <p class="p-portfolio">Веб-сайт</p>
+              </div>
             </a>
-                      
+
           </li>
           <li>
             <a class="portfolio-card" href="#">
               <div class="porfolio-description">
-              <img class="portfolio-card-img-size" src="./images/poster-ngs.jpg"
-                alt="проект Постер New Orlean vs Golden Star із розділу Дизайн" />
+                <img class="portfolio-card-img-size" src="./images/poster-ngs.jpg"
+                  alt="проект Постер New Orlean vs Golden Star із розділу Дизайн" />
                 <p class="site-description">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
                   відвідувачу отримати
                   вичерпні відомості про компанію чи приватну особу.
                 </p>
-                </div>
+              </div>
               <div class="card-description">
                 <h3 class="h3-portfolio">Постер New Orlean vs Golden Star</h3>
                 <p class="p-portfolio">Дизайн</p>
@@ -114,8 +114,7 @@
           <li>
             <a class="portfolio-card" href="#">
               <div class="porfolio-description">
-                <img class="portfolio-card-img-size" src="./images/prime.jpg"
-                  alt="Проєкт Prime із розділу Маркетинг" />
+                <img class="portfolio-card-img-size" src="./images/prime.jpg" alt="Проєкт Prime із розділу Маркетинг" />
                 <p class="site-description">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
                   відвідувачу отримати
@@ -131,8 +130,7 @@
           <li>
             <a class="portfolio-card" href="#">
               <div class="porfolio-description">
-                <img class="portfolio-card-img-size" src="./images/boxes.jpg"
-                  alt="Проєкт Boxes із розділу додатки" />
+                <img class="portfolio-card-img-size" src="./images/boxes.jpg" alt="Проєкт Boxes із розділу додатки" />
                 <p class="site-description">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
                   відвідувачу отримати
@@ -182,8 +180,7 @@
           <li>
             <a class="portfolio-card" href="#">
               <div class="porfolio-description">
-                <img class="portfolio-card-img-size" src="./images/lab.jpg"
-                  alt="Проєкт LAB із розділу Маркетинг" />
+                <img class="portfolio-card-img-size" src="./images/lab.jpg" alt="Проєкт LAB із розділу Маркетинг" />
                 <p class="site-description">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
                   відвідувачу отримати
@@ -256,7 +253,7 @@
               </svg></a>
           </li>
           <li class="footer-social-link">
-            <a  href="#">
+            <a href="#">
               <svg class="footer-social-icon">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg></a>
