--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
           <li><button class="button-style" type="button">Маркетинг</button></li>
         </ul>
         <ul class="portfolio-card-flex">
-          <li>
+          <li class="card-shadow">
             <a class="portfolio-card" href="#">
               <div class="porfolio-description">
                 <img class="portfolio-card-img-size" src="./images/tehnokriak.jpg"
@@ -77,7 +77,7 @@
             </a>
 
           </li>
-          <li>
+          <li class="card-shadow">
             <a class="portfolio-card" href="#">
               <div class="porfolio-description">
                 <img class="portfolio-card-img-size" src="./images/poster-ngs.jpg"
@@ -94,7 +94,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="card-shadow">
             <a class="portfolio-card" href="#">
               <div class="porfolio-description">
                 <img class="portfolio-card-img-size" src="./images/seafood.jpg"
@@ -111,7 +111,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="card-shadow">
             <a class="portfolio-card" href="#">
               <div class="porfolio-description">
                 <img class="portfolio-card-img-size" src="./images/prime.jpg" alt="Проєкт Prime із розділу Маркетинг" />
@@ -127,7 +127,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="card-shadow">
             <a class="portfolio-card" href="#">
               <div class="porfolio-description">
                 <img class="portfolio-card-img-size" src="./images/boxes.jpg" alt="Проєкт Boxes із розділу додатки" />
@@ -143,7 +143,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="card-shadow">
             <a class="portfolio-card" href="#">
               <div class="porfolio-description">
                 <img class="portfolio-card-img-size" src="./images/no-borders.jpg"
@@ -160,7 +160,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="card-shadow">
             <a class="portfolio-card" href="#">
               <div class="porfolio-description">
                 <img class="portfolio-card-img-size" src="./images/limited-edition.jpg"
@@ -177,7 +177,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="card-shadow">
             <a class="portfolio-card" href="#">
               <div class="porfolio-description">
                 <img class="portfolio-card-img-size" src="./images/lab.jpg" alt="Проєкт LAB із розділу Маркетинг" />
@@ -193,7 +193,7 @@
               </div>
             </a>
           </li>
-          <li>
+          <li class="card-shadow">
             <a class="portfolio-card" href="#">
               <div class="porfolio-description">
                 <img class="portfolio-card-img-size" src="./images/business.jpg"
