--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
             </a>
           </li>
-          <li class="customers-list-ithem customed">
+          <li class="customers-list-ithem">
             <a class="customer-link" href="#">
               <svg class="customer-logo">
                 <use href="./images/icons.svg#icon-company-3" width="106" height="60"></use>
